chore: add resource limit

--- a/config
+++ b/config
@@ -3,3 +3,6 @@ export SERVICE_NAME=ollama
 export SERVICE_OLLAMA_IMAGE_VERSION=${SERVICE_OLLAMA_IMAGE_VERSION:-"v0-1"}
 
 export SERVICE_OLLAMA_PORT=${SERVICE_OLLAMA_PORT}
+
+export SERVICE_OLLAMA_RESOURCE_LIMIT_MEMORY=${SERVICE_OLLAMA_RESOURCE_LIMIT_MEMORY:-20480m}
+export SERVICE_OLLAMA_RESOURCE_LIMIT_CPU=${SERVICE_OLLAMA_RESOURCE_LIMIT_CPU:-4}
