--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     #   - 0.0.0.0:${SERVICE_OLLAMA_PORT}:11434
     volumes:
       - ${SERVICE_DATA}:/root/.ollama
+    mem_limit: ${SERVICE_OLLAMA_RESOURCE_LIMIT_MEMORY}
+    cpus: ${SERVICE_OLLAMA_RESOURCE_LIMIT_CPU}
       
 networks:
   default:
